--- a/index.html
+++ b/index.html
@@ -42,6 +42,59 @@
       </div>
   </header>
 <body>
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <a href="https://www.google.com/">
+                        <img src="cajasss.jpg" class="d-block w-100" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>&Aacute;REA DE CAJA DE CAMBIO</h5>
+                      <p>Mira aqu&iacute; los trabajos que realizamos</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="https://www.google.com/">
+                        <img src="electronica3.jpg" class="d-block w-100" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>&Aacute;REA DE ELECTRONICA </h5>
+                      <p>Mira aqu&iacute; los trabajos que realizamos</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="https://www.google.com/">
+                        <img src="suspencionred.jpg" class="d-block w-100" alt="...">
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>&Aacute;REA DE SUSPENCIÓN Y DIRECCIÓN</h5>
+                      <p>Mira aqu&iacute; los trabajos que realizamos</p>
+
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
