--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="estilo.css">
     <title>Taller mecanico</title>
 </head>
 <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img src="./Rayo makween.jpg" class="rounded" alt="Cinque Terre" width="125" height="125">
-              </a>
+                <img src="./img/Rayo makween.jpg" class="rounded" alt="Cinque Terre" width="125" height="125">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -54,7 +53,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <a href="https://www.google.com/">
-                        <img src="cajasss.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/cajasss.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>&Aacute;REA DE CAJA DE CAMBIO</h5>
@@ -63,7 +62,7 @@
                   </div>
                   <div class="carousel-item">
                     <a href="https://www.google.com/">
-                        <img src="electronica3.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/electronica3.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>&Aacute;REA DE ELECTRONICA </h5>
@@ -72,12 +71,11 @@
                   </div>
                   <div class="carousel-item">
                     <a href="https://www.google.com/">
-                        <img src="suspencionred.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/suspencionred.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>&Aacute;REA DE SUSPENCIÓN Y DIRECCIÓN</h5>
                       <p>Mira aqu&iacute; los trabajos que realizamos</p>
-
                     </div>
                   </div>
                 </div>
