--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-<meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taller mecanico</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo.css">
-    <title>Taller mecanico</title>
 </head>
 <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <img src="./img/Rayo makween.jpg" class="rounded" alt="Cinque Terre" width="125" height="125">
+                <img src="./img/Logo/Rayo makween.jpg" class="rounded" alt="Cinque Terre" width="125" height="125">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><button type="button" class="btn btn-danger">Inicio</button></a>
+                    <a class="nav-link active" aria-current="page" href="./index.html"><button type="button" class="btn btn-danger">Inicio</button></a>
                   </li>
                   
                   <li class="nav-item dropdown">
@@ -25,9 +27,9 @@
                       <button type="button" class="btn btn-danger">Trabajos Realizados</button>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Cajas de cambios</li>
-                      <li><a class="dropdown-item" href="#">Electronica</li>
-                      <li><a class="dropdown-item" href="#">Suspension y direccion</li>
+                      <li><a class="dropdown-item" href="./Pag1.html">Cajas de cambios</li>
+                      <li><a class="dropdown-item" href="./Pag2.html">Electronica</li>
+                      <li><a class="dropdown-item" href="./Pag3.html">Suspension y direccion</li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -52,8 +54,8 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="https://www.google.com/">
-                        <img src="./img/cajasss.jpg" class="d-block w-100" alt="...">
+                    <a href="./Pag1.html">
+                        <img src="./img/Carrusel/cajasss.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>&Aacute;REA DE CAJA DE CAMBIO</h5>
@@ -61,8 +63,8 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://www.google.com/">
-                        <img src="./img/electronica3.jpg" class="d-block w-100" alt="...">
+                    <a href="./Pag2.html">
+                        <img src="./img/Carrusel/electronica3.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>&Aacute;REA DE ELECTRONICA </h5>
@@ -70,8 +72,8 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="https://www.google.com/">
-                        <img src="./img/suspencionred.jpg" class="d-block w-100" alt="...">
+                    <a href="./Pag3.html">
+                        <img src="./img/Carrusel/suspencionred.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
                       <h5>&Aacute;REA DE SUSPENCIÓN Y DIRECCIÓN</h5>
