--- a/Electronica.html
+++ b/Electronica.html
@@ -27,9 +27,9 @@
                     <button type="button" class="btn btn-danger">Trabajos Realizados</button>
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./Pag1.html">Cajas de cambios</li>
-                    <li><a class="dropdown-item" href="./Pag2.html">Electronica</li>
-                    <li><a class="dropdown-item" href="./Pag3.html">Suspension y direccion</li>
+                    <li><a class="dropdown-item" href="./Caja De Cambios.html">Cajas de cambios</li>
+                    <li><a class="dropdown-item" href="./Electronica.html">Electronica</li>
+                    <li><a class="dropdown-item" href="./Area de Suspencion y Direccion.html">Suspension y direccion</li>
                   </ul>
                 </li>
                 <li class="nav-item">
