--- a/Area de Suspencion y Direccion.html
+++ b/Area de Suspencion y Direccion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cajas de cambios</title>
+    <title>Suspensi&oacute;n y Direcci&oacute;n</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilo.css">
 </head>
@@ -27,9 +27,9 @@
                     <button type="button" class="btn btn-danger">Trabajos Realizados</button>
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./Pag1.html">Cajas de cambios</li>
-                    <li><a class="dropdown-item" href="./Pag2.html">Electronica</li>
-                    <li><a class="dropdown-item" href="./Pag3.html">Suspension y direccion</li>
+                    <li><a class="dropdown-item" href="./Caja De Cambios.html">Cajas de cambios</li>
+                    <li><a class="dropdown-item" href="./Electronica.html">Electronica</li>
+                    <li><a class="dropdown-item" href="./Area de Suspencion y Direccion.html">Suspensi&oacute;n y direcci&oacute;n</li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -38,7 +38,6 @@
               </ul>
             </div>
           </div>
-        
       </nav>
     </div>
 </header>
@@ -47,13 +46,13 @@
     <div class="card mb-3" style="max-width: 740px;">
         <div class="row g-0">
         <div class="col-md-4">
-          <img src="./img/Caja de cambios/caja de cambio 1.jpeg" alt="Foto 1" width="230px" height="230">
+          <img src="./img/Suspención/Suspencion 1.jpeg" alt="Foto 1" width="230px" height="230">
         </div>
         <div class="col-md-8">
             <div class="card-body">
             <h5 class="card-title">Informaci&oacute;n</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa3">
+            <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa1">
                 Ver Más información
               </button></small>
             </div>
@@ -61,7 +60,7 @@
         </div>
     </div>
   <!-- Modal -->
-  <div class="modal fade" id="exampleModa3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModa1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -69,7 +68,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <img src="./img/Caja de cambios/caja de cambio 1.jpeg" alt="" width="300px">
+          <img src="./img/Suspención/Suspencion 1.jpeg" alt="Foto 1" width="300px">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -83,7 +82,7 @@
     <div class="card mb-3" style="max-width: 740px;">
         <div class="row g-0">
         <div class="col-md-4">
-          <img src="./img/Caja de cambios/caja de cambio 2.jpeg" alt="Foto 2" width="230px" height="230">
+          <img src="./img/Suspención/Suspencion 2.jpeg" alt="Foto 2" width="230px" height="230">
         </div>
         <div class="col-md-8">
             <div class="card-body">
@@ -105,7 +104,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="./img/Caja de cambios/caja de cambio 2.jpeg" alt="" width="300px">
+          <img src="./img/Suspención/Suspencion 2.jpeg" alt="Foto 2" width="300px">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -137,11 +136,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe3">Informaci&oacute; M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="./img/Caja de cambios/caja de cambio 1.jpeg" alt="" width="300px">
+          <img src="./img/Suspención/Suspencion 3.jpeg" alt="Foto 3" width="300px">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -151,6 +150,6 @@
     </div>
   </div>
 <!--Fin Tercer Dato-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
