--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                       <button type="button" class="btn btn-danger">Trabajos Realizados</button>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./Pag1.html">Cajas de cambios</li>
-                      <li><a class="dropdown-item" href="./Pag2.html">Electronica</li>
-                      <li><a class="dropdown-item" href="./Pag3.html">Suspension y direccion</li>
+                      <li><a class="dropdown-item" href="./Caja De Cambios.html">Cajas de cambios</li>
+                      <li><a class="dropdown-item" href="./Electronica.html">Electronica</li>
+                      <li><a class="dropdown-item" href="./Area de Suspencion y Direccion.html">Suspension y direccion</li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="./Pag1.html">
+                    <a href="./Caja De Cambios.html">
                         <img src="./img/Carrusel/cajasss.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
@@ -63,7 +63,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="./Pag2.html">
+                    <a href="./Electronica.html">
                         <img src="./img/Carrusel/electronica3.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
@@ -72,7 +72,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <a href="./Pag3.html">
+                    <a href="./Area de Suspencion y Direccion.html">
                         <img src="./img/Carrusel/suspencionred.jpg" class="d-block w-100" alt="...">
                     </a>
                     <div class="carousel-caption d-none d-md-block">
