agregación de info por area

--- a/Electronica.html
+++ b/Electronica.html
@@ -46,12 +46,16 @@
     <div class="card mb-3" style="max-width: 740px;">
         <div class="row g-0">
         <div class="col-md-4">
-            <img src="img/Electronica/Electronica 1.jpeg" alt="Foto 1" width="230">
+            <img src="img/Electronica/Electronica 1.jpeg" alt="Foto 1" width="250" height="230">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Reprogramación de ECU| Chipeo</h5>
+            <p class="card-text">
+              <h5>Marca:Renault</h5>
+              <br>
+              <h5>Modelo:Clio RS</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Ver Más información
               </button></small>
@@ -69,6 +73,30 @@
         </div>
         <div class="modal-body">
           <img src="img/Electronica/Electronica 1.jpeg" alt="Foto 1" width="300px">
+          <h5>Reparacion:Reprogramaci&oacute;n de ECU| Chipeo</h5>
+          <br>
+          <h5>Marca:Renault</h5>
+          <br>
+          <h5>Modelo:Clio RS</h5>
+          <br>
+          <h5>Mecanico responsable:Christian Godoy</h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo:1 horas y 20 minutos</h5>
+          <br>
+          <h5>Informaci&oacute;n General:se realizo una reprogramaci&oacute;n ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
+            En esta ocasión se ha trabajado en un veh&iacute;culo de marca Renault, modelo Clio RS, un stage 1,aumentando su potencia +30HP y +75NM.</h5>
+          <br>
+          <h5>Los requisitos para realizar Las Reprogramaci&oacute;nes ECU son:</h5>
+          <br>
+          <h5>- Lugar con Enchufe Disponible.</h5>
+          <br>
+          <h5>- Señal de Celular para Conexión a Internet.</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Bencina 97 Octanos o Diesel.</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
@@ -82,12 +110,16 @@
     <div class="card mb-3" style="max-width: 740px;">
         <div class="row g-0">
         <div class="col-md-4">
-            <img src="./img/Electronica/Electronica 2.jpeg" alt="Foto 2" width="230">
+            <img src="./img/Electronica/Electronica 2.jpeg" alt="Foto 2" width="250" height="230">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Reprogramación de ECU| Chipeo</h5>
+            <p class="card-text">
+              <h5>Marca:BMW </h5>
+              <br>
+              <h5>Modelo:316i</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa2">
                 Ver Más información
               </button></small>
@@ -105,6 +137,30 @@
         </div>
         <div class="modal-body">
           <img src="img/Electronica/Electronica 2.jpeg" alt="Foto 2" width="300px">
+          <h5>Reparacion:Reprogramaci&oacute;n de ECU| Chipeo</h5>
+            <br>
+            <h5>Marca:BMW</h5>
+            <br>
+            <h5>Modelo:316i</h5>
+            <br>
+            <h5>Mecanico responsable:Jefferson Jaque</h5>
+            <br>
+            <h5>Duraci&oacute;n aproximada del trabajo:2 horas y 15 minutos</h5>
+            <br>
+            <h5>Informaci&oacute;n General:se realizo una reprogramación ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
+            En esta ocasión se ha trabajado en un vehículo de marca BMW, modelo 316i, un stage 1,aumentando su potencia +84HP y +95NM, quedando con una potencia de 210HP y 315Nm.</h5>
+            <br>
+            <h5>Los requisitos para realizar Las Reprogramaci&oacute;nes ECU son:</h5>
+            <br>
+            <h5>- Lugar con Enchufe Disponible.</h5>
+            <br>
+            <h5>- Señal de Celular para Conexión a Internet.</h5>
+            <br>
+            <h5>- Uso Obligatorio de Mascarilla.</h5>
+            <br>
+            <h5>- Bencina 97 Octanos o Diesel.</h5>
+            <br>
+            <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -118,12 +174,16 @@
     <div class="card mb-3" style="max-width: 740px;">
         <div class="row g-0">
         <div class="col-md-4">
-            <img src="./img/Electronica/Electronica 3.jpeg" alt="Foto 3" width="230">
+            <img src="./img/Electronica/Electronica 3.jpeg" alt="Foto 3" width="250" height="230">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Reprogramaci&oacute;n de ECU| Chipeo</h5>
+            <p class="card-text">
+              <h5>Marca:BMW </h5>
+              <br>
+              <h5>Modelo:118 d</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa3">
                 Ver Más información
               </button></small>
@@ -141,6 +201,30 @@
         </div>
         <div class="modal-body">
           <img src="img/Electronica/Electronica 3.jpeg" alt="Foto 3" width="300px">
+          <h5>Reparacion:Reprogramaci&oacute;n de ECU| Chipeo</h5>
+          <br>
+          <h5>Marca:BMW</h5>
+          <br>
+          <h5>Modelo:118 d</h5>
+          <br>
+          <h5>Mecanico responsable:Sebasti&aacute;n Flores</h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo:1 hora y 45 minutos</h5>
+          <br>
+          <h5>Informaci&oacute;n General:se realizo una reprogramación ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
+            En esta ocasión se ha trabajado en un vehículo de marca BMW, modelo 118 d, un stage 1,aumentando su potencia +40HP y +80Nm.</h5>
+          <br>
+          <h5>Los requisitos para realizar Las Reprogramaci&oacute;nes ECU son:</h5>
+          <br>
+          <h5>- Lugar con Enchufe Disponible.</h5>
+          <br>
+          <h5>- Señal de Celular para Conexión a Internet.</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Bencina 97 Octanos o Diesel.</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
