--- a/Area de Suspencion y Direccion.html
+++ b/Area de Suspencion y Direccion.html
@@ -50,8 +50,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Kit suspensi&oacute;n Deportiva</h5>
+            <p class="card-text">
+              <h5>Marca: Ford</h5>
+              <br>
+              <h5>Modelo: GT-500</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa1">
                 Ver Más información
               </button></small>
@@ -69,6 +73,26 @@
         </div>
         <div class="modal-body">
           <img src="./img/Suspención/Suspencion 1.jpeg" alt="Foto 1" width="300px">
+          <h5>Reparaci&oacute;n: Kit Suspensi&oacute;n Deportiva</h5>
+          <br>
+          <h5>Marca:Ford</h5>
+          <br>
+          <h5>Modelo:GT-500</h5>
+          <br>
+          <h5>Mecanico responsable:Sebasti&aacute;n Flores</h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo:3 horas y 45 minutos.</h5>
+          <br>
+          <h5>Informaci&oacute;n general:En esta ocasi&oacute;n se ha trabajado en veh&iacute;culo de marca Ford, modelo GT500, un kit de suspensi&oacute;n de marca Eibach,
+            con esto mejorara el control de manejo y su estabilidad, aumentando la seguridad, confort y desempeño en caminos pavimentados.</h5>
+          <br>
+          <h5>Los requisitos para realizar Las instalaciones son:</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Cumplir con los horarios acordados de llegada al taller</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -86,8 +110,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Kit suspensi&oacute;n de Competencia</h5>
+            <p class="card-text">
+              <h5>Marca:Chevrolet</h5>
+              <br>
+              <h5>Modelo:Silverado</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa2">
                 Ver Más información
               </button></small>
@@ -105,6 +133,27 @@
         </div>
         <div class="modal-body">
           <img src="./img/Suspención/Suspencion 2.jpeg" alt="Foto 2" width="300px">
+          <h5>Reparaci&oacute;n: Kit Suspensi&oacute;n de Competencia</h5>
+          <br>
+          <h5>Marca:Chevrolet</h5>
+          <br>
+          <h5>Modelo:Silverado</h5>
+          <br>
+          <h5>Mecanico responsable:Jefferson Jaque </h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo:3 horas y 50 minutos.</h5>
+          <br>
+          <h5>Informaci&oacute;n general:En esta ocasi&oacute;n se ha trabajado en camioneta de marca Chevrolet, modelo silverado, un kit de suspensi&oacute;n de competencia marca Fox,
+            modelo IFP, con esto mejorara el control de manejo y su estabilidad, aumentando la seguridad, confort y desempeño tanto en caminos pavimentados como 
+            caminos off road. </h5>
+          <br>
+          <h5>Los requisitos para realizar Las instalaciones son:</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Cumplir con los horarios acordados de llegada al taller</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -122,8 +171,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Kit suspensi&oacute;n Deportiva</h5>
+            <p class="card-text">
+              <h5>Marca:Ferrari</h5>
+              <br>
+              <h5>Modelo:458 Italia</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa3">
                 Ver Más información
               </button></small>
@@ -141,6 +194,26 @@
         </div>
         <div class="modal-body">
           <img src="./img/Suspención/Suspencion 3.jpeg" alt="Foto 3" width="300px">
+          <h5>Reparaci&oacute;n: Kit Suspensi&oacute;n Deportivo</h5>
+          <br>
+          <h5>Marca:Ferrari</h5>
+          <br>
+          <h5>Modelo:458 Italia</h5>
+          <br>
+          <h5>Mecanico responsable:Christian Godoy </h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo:3 horas y 35 minutos.</h5>
+          <br>
+          <h5>Informaci&oacute;n general:En esta ocasi&oacute;n se ha trabajado un veh&iacute;culo superdeportivo marca Ferrari, modelo 458 Italia, un kit de suspensi&oacute;n marca Novitec
+            sport primavera, con esto mejorara el control de manejo y su estabilidad, aumentando la seguridad, confort y desempeño en caminos pavimentados.</h5>
+          <br>
+          <h5>Los requisitos para realizar Las instalaciones son:</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Cumplir con los horarios acordados de llegada al taller</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
