texto caja de cambios

--- a/Caja De Cambios.html
+++ b/Caja De Cambios.html
@@ -51,8 +51,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Cambio de aceite y empaquetadura</h5>
+            <p class="card-text">
+              <h5>Marca: Subaru</h5>
+              <br>
+              <h5>Modelo: XV 1.6 Auto</h5>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa1">
                 Ver Más información
               </button></small>
@@ -70,6 +74,28 @@
         </div>
         <div class="modal-body">
             <img src="./img/Caja de cambios/caja de cambio 1.jpeg" alt="" width="300px">
+          <h5>Reparaci&oacute;n: Cambio de aceite y empaquetadura</h5>
+          <br>
+          <h5>Marca: Subaru</h5>
+          <br>
+          <h5>Modelo: XV 1.6 Auto</h5>
+          <br>
+          <h5>Mecanico responsable: Sebasti&aacute;n Flores</h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo: 5 horas </h5>
+          <br>
+          <h5>Informaci&oacute;n general: En esta ocasi&oacute;n se ha trabajado en veh&iacute;culo de marca Subaru, modelo XV, se hizo el mantenimiento correspondiente a su caja de cambios automatica, 
+            con sus respectivo cambio de aceite y cambio de la empaquetadura de la caja de cambios.</h5>
+          <br>
+          <h5>Los requisitos para realizar Las instalaciones son:</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Cumplir con los horarios acordados de llegada al taller</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
+
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -87,8 +113,11 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Cambio de anillos sincronizadores</h5>
+            <p class="card-text">  
+              <h5>Marca: Toyota</h5>
+              <br>
+              <h5>Modelo: Corolla</h5></p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa2">
                 Ver Más información
               </button></small>
@@ -106,6 +135,28 @@
         </div>
         <div class="modal-body">
           <img src="./img/Caja de cambios/caja de cambio 2.jpeg" alt="" width="300px">
+          <h5>Reparaci&oacute;n: Cambio de anillos sincronizadores </h5>
+          <br>
+          <h5>Marca: Toyota</h5>
+          <br>
+          <h5>Modelo: Corolla</h5>
+          <br>
+          <h5>Mecanico responsable: Jefferson Jaque </h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo: 5 dias </h5>
+          <br>
+          <h5>Informaci&oacute;n general: En esta ocasi&oacute;n se ha trabajado en una caja de cambios de un Toyota Corolla 2005, que tenia problemas con la sincronizacionde las marchas, 
+            se saco la caja de cambios del veh&iacute;culo, luego se desarmo y se cambiaron sus sincronizadores. Esto lleva su respectivo cambio de aceite de la caja.
+          </h5>
+          <br>
+          <h5>Los requisitos para realizar Las instalaciones son:</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Cumplir con los horarios acordados de llegada al taller</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
+        </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -123,8 +174,12 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">Informaci&oacute;n</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Cambio de aceite y flitro </h5>
+            <p class="card-text">
+              <h5>Marca: Nissan</h5>
+              <br>
+              <h5>Modelo: Np300</h5></p>
+            </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa3">
                 Ver Más información
               </button></small>
@@ -142,6 +197,27 @@
         </div>
         <div class="modal-body">
           <img src="./img/Caja de cambios/caja de cambio 3.jpeg" alt="" width="300px">
+          <h5>Reparaci&oacute;n: Cambio de aceite y flitro</h5>
+          <br>
+          <h5>Marca: Nissan</h5>
+          <br>
+          <h5>Modelo: Np300</h5>
+          <br>
+          <h5>Mecanico responsable: Christian Godoy </h5>
+          <br>
+          <h5>Duraci&oacute;n aproximada del trabajo: 4 Horas </h5>
+          <br>
+          <h5>Informaci&oacute;n general: En esta ocasi&oacute;n se ha trabajado en una caja de cambios de una camioneta Nissan Np300, que llego para mantenimiento de su caja.
+            Se realizo cambio de aceite y filtro de la caja de cambios.
+          </h5>
+          <br>
+          <h5>Los requisitos para realizar Las instalaciones son:</h5>
+          <br>
+          <h5>- Uso Obligatorio de Mascarilla.</h5>
+          <br>
+          <h5>- Cumplir con los horarios acordados de llegada al taller</h5>
+          <br>
+          <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
