--- a/Electronica.html
+++ b/Electronica.html
@@ -52,9 +52,9 @@
             <div class="card-body">
             <h5 class="card-title">Reprogramación de ECU| Chipeo</h5>
             <p class="card-text">
-              <h5>Marca:Renault</h5>
+              <h5>Marca: Renault</h5>
               <br>
-              <h5>Modelo:Clio RS</h5>
+              <h5>Modelo: Clio RS</h5>
             </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Ver Más información
@@ -75,15 +75,15 @@
           <img src="img/Electronica/Electronica 1.jpeg" alt="Foto 1" width="300px">
           <h5>Reparacion:Reprogramaci&oacute;n de ECU| Chipeo</h5>
           <br>
-          <h5>Marca:Renault</h5>
+          <h5>Marca: Renault</h5>
           <br>
-          <h5>Modelo:Clio RS</h5>
+          <h5>Modelo: Clio RS</h5>
           <br>
           <h5>Mecanico responsable:Christian Godoy</h5>
           <br>
-          <h5>Duraci&oacute;n aproximada del trabajo:1 horas y 20 minutos</h5>
+          <h5>Duraci&oacute;n aproximada del trabajo: 1 horas y 20 minutos</h5>
           <br>
-          <h5>Informaci&oacute;n General:se realizo una reprogramaci&oacute;n ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
+          <h5>Informaci&oacute;n General: Se realizo una reprogramaci&oacute;n ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
             En esta ocasión se ha trabajado en un veh&iacute;culo de marca Renault, modelo Clio RS, un stage 1,aumentando su potencia +30HP y +75NM.</h5>
           <br>
           <h5>Los requisitos para realizar Las Reprogramaci&oacute;nes ECU son:</h5>
@@ -116,9 +116,9 @@
             <div class="card-body">
             <h5 class="card-title">Reprogramación de ECU| Chipeo</h5>
             <p class="card-text">
-              <h5>Marca:BMW </h5>
+              <h5>Marca: BMW </h5>
               <br>
-              <h5>Modelo:316i</h5>
+              <h5>Modelo: 316i</h5>
             </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa2">
                 Ver Más información
@@ -139,15 +139,15 @@
           <img src="img/Electronica/Electronica 2.jpeg" alt="Foto 2" width="300px">
           <h5>Reparacion:Reprogramaci&oacute;n de ECU| Chipeo</h5>
             <br>
-            <h5>Marca:BMW</h5>
+            <h5>Marca: BMW</h5>
             <br>
-            <h5>Modelo:316i</h5>
+            <h5>Modelo: 316i</h5>
             <br>
-            <h5>Mecanico responsable:Jefferson Jaque</h5>
+            <h5>Mecanico responsable: Jefferson Jaque</h5>
             <br>
-            <h5>Duraci&oacute;n aproximada del trabajo:2 horas y 15 minutos</h5>
+            <h5>Duraci&oacute;n aproximada del trabajo: 2 horas y 15 minutos</h5>
             <br>
-            <h5>Informaci&oacute;n General:se realizo una reprogramación ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
+            <h5>Informaci&oacute;n General: Se realizo una reprogramación ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
             En esta ocasión se ha trabajado en un vehículo de marca BMW, modelo 316i, un stage 1,aumentando su potencia +84HP y +95NM, quedando con una potencia de 210HP y 315Nm.</h5>
             <br>
             <h5>Los requisitos para realizar Las Reprogramaci&oacute;nes ECU son:</h5>
@@ -180,9 +180,9 @@
             <div class="card-body">
             <h5 class="card-title">Reprogramaci&oacute;n de ECU| Chipeo</h5>
             <p class="card-text">
-              <h5>Marca:BMW </h5>
+              <h5>Marca: BMW </h5>
               <br>
-              <h5>Modelo:118 d</h5>
+              <h5>Modelo: 118 d</h5>
             </p>
             <p class="card-text"><small class="text-muted"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModa3">
                 Ver Más información
@@ -203,15 +203,15 @@
           <img src="img/Electronica/Electronica 3.jpeg" alt="Foto 3" width="300px">
           <h5>Reparacion:Reprogramaci&oacute;n de ECU| Chipeo</h5>
           <br>
-          <h5>Marca:BMW</h5>
+          <h5>Marca: BMW</h5>
           <br>
-          <h5>Modelo:118 d</h5>
+          <h5>Modelo: 118 d</h5>
           <br>
-          <h5>Mecanico responsable:Sebasti&aacute;n Flores</h5>
+          <h5>Mecanico responsable: Sebasti&aacute;n Flores</h5>
           <br>
-          <h5>Duraci&oacute;n aproximada del trabajo:1 hora y 45 minutos</h5>
+          <h5>Duraci&oacute;n aproximada del trabajo: 1 hora y 45 minutos</h5>
           <br>
-          <h5>Informaci&oacute;n General:se realizo una reprogramación ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
+          <h5>Informaci&oacute;n General: Se realizo una reprogramación ECU o Chipeo consiste en incrementar la potencia, sin modificar fisicamente el motor.
             En esta ocasión se ha trabajado en un vehículo de marca BMW, modelo 118 d, un stage 1,aumentando su potencia +40HP y +80Nm.</h5>
           <br>
           <h5>Los requisitos para realizar Las Reprogramaci&oacute;nes ECU son:</h5>
