cambios de letras

--- a/Electronica.html
+++ b/Electronica.html
@@ -68,7 +68,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Informaci&oacuten; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Informaci&oacute;n M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -132,7 +132,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute;n M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -196,7 +196,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute;n M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
