--- a/Caja De Cambios.html
+++ b/Caja De Cambios.html
@@ -69,7 +69,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute;n M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -130,7 +130,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute;n M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -192,7 +192,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute;n M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
