--- a/Area de Suspencion y Direccion.html
+++ b/Area de Suspencion y Direccion.html
@@ -7,6 +7,38 @@
     <title>Suspensi&oacute;n y Direcci&oacute;n</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilo.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $("#msg").hide();
+        $("#msg2").hide();
+        var urlBase = "https://www.metaweather.com/api/location/search/?lattlong=";
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition);
+            } else {
+                $("#msg2").append("Geolocation is not supported by this browser.");
+                $("#msg2").show();
+            }
+        }) 
+        function showPosition(position) {
+            $("#mensajeLatLon").remove();
+            $("#msg").append(`<div id="mensajeLatLon">Latitude: ${position.coords.latitude} <br> Longitude: ${position.coords.longitude}</div>`);
+            $("#msg").show();
+            var lat = position.coords.latitude;
+            var lon = position.coords.longitude;
+            var urlFormatted = urlBase+lat+","+lon;
+            $.get(urlFormatted,function(data){
+            }).then(function(data){
+                var id = data[0].woeid;
+                var newUrl = "https://www.metaweather.com/api/location/"+id;
+                $.get(newUrl,function(data){
+                    var tempPromedio = data.consolidated_weather[0].the_temp;
+                    var Icon = data.consolidated_weather[0].weather_state_abbr;
+                    $("#mensajeLatLon").append( `<br><h4> La temperatura</h4> en ${data.title} es de ${tempPromedio} °C y esta <img src ="https://www.metaweather.com/static/img/weather/${Icon}.svg" style="width:32px">`);
+                })
+            })
+        }
+</script>
 </head>
 <header>
   <div class="container">
@@ -32,6 +64,7 @@
                     <li><a class="dropdown-item" href="./Area de Suspencion y Direccion.html">Suspensi&oacute;n y direcci&oacute;n</li>
                   </ul>
                 </li>
+                <a class="nav-link active" aria-current="page" href="./Formulario.html"><button type="button" class="btn btn-danger">Marcas Incluidas</button></a>
                 <li class="nav-item">
                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                 </li>
@@ -41,7 +74,13 @@
       </nav>
     </div>
 </header>
-<body> 
+<body>
+  <div class="container">
+    <div class="row">
+        <div class="alert alert-primary mt-3" role="alert" id="msg">
+        </div>
+        <div class="alert alert-danger" role="alert" id="msg2">
+        </div>
 <!--Primer Dato-->
     <div class="card mb-3" style="max-width: 740px;">
         <div class="row g-0">
