--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller mecanico</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Taller mecanico</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="stylesheet" href="estilo.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $("#msg").hide();
+        $("#msg2").hide();
+        var urlBase = "https://www.metaweather.com/api/location/search/?lattlong=";
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition);
+            } else {
+                $("#msg2").append("Geolocation is not supported by this browser.");
+                $("#msg2").show();
+            }
+        }) 
+        function showPosition(position) {
+            $("#mensajeLatLon").remove();
+            $("#msg").append(`<div id="mensajeLatLon">Latitude: ${position.coords.latitude} <br> Longitude: ${position.coords.longitude}</div>`);
+            $("#msg").show();
+            var lat = position.coords.latitude;
+            var lon = position.coords.longitude;
+            var urlFormatted = urlBase+lat+","+lon;
+            $.get(urlFormatted,function(data){
+            }).then(function(data){
+                var id = data[0].woeid;
+                var newUrl = "https://www.metaweather.com/api/location/"+id;
+                $.get(newUrl,function(data){
+                    var tempPromedio = data.consolidated_weather[0].the_temp;
+                    var Icon = data.consolidated_weather[0].weather_state_abbr;
+                    $("#mensajeLatLon").append( `<br><h4> La temperatura</h4> en ${data.title} es de ${tempPromedio} °C y esta <img src ="https://www.metaweather.com/static/img/weather/${Icon}.svg" style="width:32px">`);
+                })
+            })
+        }
+</script>
 <header>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <img src="./img/Logo/Rayo makween.jpg" class="rounded" alt="Cinque Terre" width="125" height="125">
-                <div id="clima"></div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -22,7 +52,6 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./index.html"><button type="button" class="btn btn-danger">Inicio</button></a>
                   </li>
-                  
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       <button type="button" class="btn btn-danger">Trabajos Realizados</button>
@@ -33,6 +62,7 @@
                       <li><a class="dropdown-item" href="./Area de Suspencion y Direccion.html">Suspension y direccion</li>
                     </ul>
                   </li>
+                  <a class="nav-link active" aria-current="page" href="./Formulario.html"><button type="button" class="btn btn-danger">Marcas Incluidas</button></a>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                   </li>
@@ -43,6 +73,15 @@
       </div>
   </header>
 <body>
+    <div class="container">
+      <div class="row">
+          <div class="alert alert-primary mt-3" role="alert" id="msg">
+          </div>
+          <div class="alert alert-danger" role="alert" id="msg2">
+          </div>
+      </div>
+  </div>
+  </div>
   <div class="container">
     <div class="row">
         <div class="col-sm-12">
